antlr shtuff/antlr/lolcodeParser.py
# Generated from /Users/karolinabogacka/PycharmProjects/lol2py/antlr shtuff/lolcode.g4 by ANTLR 4.7.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys




class lolcodeParser ( Parser ):

    grammarFileName = "lolcode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'HAI'", "'KTHXBYE'", "'IM IN YR'", "'WILE'", 
                     "'IM OUTTA YR'", "'I HAS A'", "'ITZ'", "'BTW'", "'OBTW'", 
                     "'TLDR'", "'VISIBLE'", "'MKAY?'", "'O RLY?'", "'YA RLY'", 
                     "'OIC'", "'MEBBE'", "'NO WAI'", "'GIMMEH'", "'HOW DUZ I'", 
                     "'YR'", "'AN YR'", "'IF U SAY SO'", "'R'", "'BOTH SAEM'", 
                     "'DIFFRINT'", "'BOTH OF'", "'EITHER OF'", "'BIGGR OF'", 
                     "'SMALLR OF'", "'SUM OF'", "'DIFF OF'", "'PRODUKT OF'", 
                     "'QUOSHUNT OF'", "'MOD OF'", "'ALL OF'", "'AN'", "'ANY OF'", 
                     "'NOT'", "'I IZ'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "' '" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "ATOM", "LABEL", "BOOLEAN", "STRING", "WHITESPACE", 
                      "NEWLINE" ]

    RULE_program = 0
    RULE_code_block = 1
    RULE_statement = 2
    RULE_loop = 3
    RULE_declaration = 4
    RULE_comment = 5
    RULE_print_block = 6
    RULE_if_block = 7
    RULE_else_if_block = 8
    RULE_input_block = 9
    RULE_func_decl = 10
    RULE_assignment = 11
    RULE_full_expression = 12
    RULE_expression = 13
    RULE_equals = 14
    RULE_not_equals = 15
    RULE_both = 16
    RULE_either = 17
    RULE_greater = 18
    RULE_less = 19
    RULE_add = 20
    RULE_sub = 21
    RULE_mul = 22
    RULE_div = 23
    RULE_mod = 24
    RULE_r_all = 25
    RULE_r_any = 26
    RULE_nope = 27
    RULE_func = 28
    RULE_r_an = 29

    ruleNames =  [ "program", "code_block", "statement", "loop", "declaration", 
                   "comment", "print_block", "if_block", "else_if_block", 
                   "input_block", "func_decl", "assignment", "full_expression", 
                   "expression", "equals", "not_equals", "both", "either", 
                   "greater", "less", "add", "sub", "mul", "div", "mod", 
                   "r_all", "r_any", "nope", "func", "r_an" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    T__28=29
    T__29=30
    T__30=31
    T__31=32
    T__32=33
    T__33=34
    T__34=35
    T__35=36
    T__36=37
    T__37=38
    T__38=39
    ATOM=40
    LABEL=41
    BOOLEAN=42
    STRING=43
    WHITESPACE=44
    NEWLINE=45

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self):
            return self.getToken(lolcodeParser.NEWLINE, 0)

        def code_block(self):
            return self.getTypedRuleContext(lolcodeParser.Code_blockContext,0)


        def getRuleIndex(self):
            return lolcodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = lolcodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 60
            self.match(lolcodeParser.T__0)
            self.state = 61
            self.match(lolcodeParser.NEWLINE)
            self.state = 62
            self.code_block()
            self.state = 64
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lolcodeParser.T__1:
                self.state = 63
                self.match(lolcodeParser.T__1)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Code_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lolcodeParser.StatementContext)
            else:
                return self.getTypedRuleContext(lolcodeParser.StatementContext,i)


        def getRuleIndex(self):
            return lolcodeParser.RULE_code_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCode_block" ):
                listener.enterCode_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCode_block" ):
                listener.exitCode_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode_block" ):
                return visitor.visitCode_block(self)
            else:
                return visitor.visitChildren(self)




    def code_block(self):

        localctx = lolcodeParser.Code_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_code_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 66
                self.statement()
                self.state = 69 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << lolcodeParser.T__2) | (1 << lolcodeParser.T__5) | (1 << lolcodeParser.T__7) | (1 << lolcodeParser.T__8) | (1 << lolcodeParser.T__10) | (1 << lolcodeParser.T__12) | (1 << lolcodeParser.T__17) | (1 << lolcodeParser.T__18) | (1 << lolcodeParser.T__23) | (1 << lolcodeParser.T__24) | (1 << lolcodeParser.T__25) | (1 << lolcodeParser.T__26) | (1 << lolcodeParser.T__27) | (1 << lolcodeParser.T__28) | (1 << lolcodeParser.T__29) | (1 << lolcodeParser.T__30) | (1 << lolcodeParser.T__31) | (1 << lolcodeParser.T__32) | (1 << lolcodeParser.T__33) | (1 << lolcodeParser.T__34) | (1 << lolcodeParser.T__36) | (1 << lolcodeParser.T__37) | (1 << lolcodeParser.T__38) | (1 << lolcodeParser.ATOM) | (1 << lolcodeParser.LABEL))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def loop(self):
            return self.getTypedRuleContext(lolcodeParser.LoopContext,0)


        def NEWLINE(self):
            return self.getToken(lolcodeParser.NEWLINE, 0)

        def declaration(self):
            return self.getTypedRuleContext(lolcodeParser.DeclarationContext,0)


        def comment(self):
            return self.getTypedRuleContext(lolcodeParser.CommentContext,0)


        def print_block(self):
            return self.getTypedRuleContext(lolcodeParser.Print_blockContext,0)


        def if_block(self):
            return self.getTypedRuleContext(lolcodeParser.If_blockContext,0)


        def input_block(self):
            return self.getTypedRuleContext(lolcodeParser.Input_blockContext,0)


        def func_decl(self):
            return self.getTypedRuleContext(lolcodeParser.Func_declContext,0)


        def assignment(self):
            return self.getTypedRuleContext(lolcodeParser.AssignmentContext,0)


        def full_expression(self):
            return self.getTypedRuleContext(lolcodeParser.Full_expressionContext,0)


        def getRuleIndex(self):
            return lolcodeParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = lolcodeParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 96
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                self.loop()
                self.state = 72
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.declaration()
                self.state = 75
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 77
                self.comment()
                self.state = 78
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 80
                self.print_block()
                self.state = 81
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 83
                self.if_block()
                self.state = 84
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.input_block()
                self.state = 87
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 89
                self.func_decl()
                self.state = 90
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 92
                self.assignment()
                self.state = 93
                self.match(lolcodeParser.NEWLINE)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 95
                self.full_expression()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LoopContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(lolcodeParser.LABEL)
            else:
                return self.getToken(lolcodeParser.LABEL, i)

        def full_expression(self):
            return self.getTypedRuleContext(lolcodeParser.Full_expressionContext,0)


        def code_block(self):
            return self.getTypedRuleContext(lolcodeParser.Code_blockContext,0)


        def getRuleIndex(self):
            return lolcodeParser.RULE_loop

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLoop" ):
                listener.enterLoop(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLoop" ):
                listener.exitLoop(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop" ):
                return visitor.visitLoop(self)
            else:
                return visitor.visitChildren(self)




    def loop(self):

        localctx = lolcodeParser.LoopContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_loop)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 98
            self.match(lolcodeParser.T__2)
            self.state = 99
            self.match(lolcodeParser.LABEL)
            self.state = 100
            self.match(lolcodeParser.T__3)
            self.state = 101
            self.full_expression()
            self.state = 102
            self.code_block()
            self.state = 103
            self.match(lolcodeParser.T__4)
            self.state = 104
            self.match(lolcodeParser.LABEL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(lolcodeParser.LABEL, 0)

        def ATOM(self):
            return self.getToken(lolcodeParser.ATOM, 0)

        def getRuleIndex(self):
            return lolcodeParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = lolcodeParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_declaration)
        try:
            self.state = 112
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 106
                self.match(lolcodeParser.T__5)
                self.state = 107
                self.match(lolcodeParser.LABEL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 108
                self.match(lolcodeParser.T__5)
                self.state = 109
                self.match(lolcodeParser.LABEL)
                self.state = 110
                self.match(lolcodeParser.T__6)
                self.state = 111
                self.match(lolcodeParser.ATOM)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CommentContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expression(self):
            return self.getTypedRuleContext(lolcodeParser.ExpressionContext,0)


        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(lolcodeParser.NEWLINE)
            else:
                return self.getToken(lolcodeParser.NEWLINE, i)

        def full_expression(self):
            return self.getTypedRuleContext(lolcodeParser.Full_expressionContext,0)


        def STRING(self):
            return self.getToken(lolcodeParser.STRING, 0)

        def getRuleIndex(self):
            return lolcodeParser.RULE_comment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComment" ):
                listener.enterComment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComment" ):
                listener.exitComment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitComment" ):
                return visitor.visitComment(self)
            else:
                return visitor.visitChildren(self)




    def comment(self):

        localctx = lolcodeParser.CommentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_comment)
        try:
            self.state = 128
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.match(lolcodeParser.T__7)
                self.state = 115
                self.expression()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 116
                self.match(lolcodeParser.T__8)
                self.state = 117
                self.match(lolcodeParser.NEWLINE)
                self.state = 118
                self.full_expression()
                self.state = 119
                self.match(lolcodeParser.T__9)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 121
                self.match(lolcodeParser.T__7)
                self.state = 122
                self.match(lolcodeParser.STRING)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 123
                self.match(lolcodeParser.T__8)
                self.state = 124
                self.match(lolcodeParser.NEWLINE)
                self.state = 125
                self.match(lolcodeParser.STRING)
                self.state = 126
                self.match(lolcodeParser.NEWLINE)
                self.state = 127
                self.match(lolcodeParser.T__9)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Print_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self, i:int=None):
            if i is None:
                return self.getTokens(lolcodeParser.STRING)
            else:
                return self.getToken(lolcodeParser.STRING, i)

        def expression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(lolcodeParser.ExpressionContext)
            else:
                return self.getTypedRuleContext(lolcodeParser.ExpressionContext,i)


        def getRuleIndex(self):
            return lolcodeParser.RULE_print_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrint_block" ):
                listener.enterPrint_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrint_block" ):
                listener.exitPrint_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrint_block" ):
                return visitor.visitPrint_block(self)
            else:
                return visitor.visitChildren(self)




    def print_block(self):

        localctx = lolcodeParser.Print_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_print_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.match(lolcodeParser.T__10)
            self.state = 134
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 131
                    self.match(lolcodeParser.STRING) 
                self.state = 136
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

            self.state = 140
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << lolcodeParser.T__23) | (1 << lolcodeParser.T__24) | (1 << lolcodeParser.T__25) | (1 << lolcodeParser.T__26) | (1 << lolcodeParser.T__27) | (1 << lolcodeParser.T__28) | (1 << lolcodeParser.T__29) | (1 << lolcodeParser.T__30) | (1 << lolcodeParser.T__31) | (1 << lolcodeParser.T__32) | (1 << lolcodeParser.T__33) | (1 << lolcodeParser.T__34) | (1 << lolcodeParser.T__36) | (1 << lolcodeParser.T__37) | (1 << lolcodeParser.T__38) | (1 << lolcodeParser.ATOM) | (1 << lolcodeParser.LABEL))) != 0):
                self.state = 137
                self.expression()
                self.state = 142
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 146
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==lolcodeParser.STRING:
                self.state = 143
                self.match(lolcodeParser.STRING)
                self.state = 148
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lolcodeParser.T__11:
                self.state = 149
                self.match(lolcodeParser.T__11)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class If_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(lolcodeParser.NEWLINE)
            else:
                return self.getToken(lolcodeParser.NEWLINE, i)

        def code_block(self):
            return self.getTypedRuleContext(lolcodeParser.Code_blockContext,0)


        def else_if_block(self):
            return self.getTypedRuleContext(lolcodeParser.Else_if_blockContext,0)


        def getRuleIndex(self):
            return lolcodeParser.RULE_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIf_block" ):
                listener.enterIf_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIf_block" ):
                listener.exitIf_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIf_block" ):
                return visitor.visitIf_block(self)
            else:
                return visitor.visitChildren(self)




    def if_block(self):

        localctx = lolcodeParser.If_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_if_block)
        try:
            self.state = 167
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 152
                self.match(lolcodeParser.T__12)
                self.state = 153
                self.match(lolcodeParser.NEWLINE)
                self.state = 154
                self.match(lolcodeParser.T__13)
                self.state = 155
                self.match(lolcodeParser.NEWLINE)
                self.state = 156
                self.code_block()
                self.state = 157
                self.match(lolcodeParser.T__14)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 159
                self.match(lolcodeParser.T__12)
                self.state = 160
                self.match(lolcodeParser.NEWLINE)
                self.state = 161
                self.match(lolcodeParser.T__13)
                self.state = 162
                self.match(lolcodeParser.NEWLINE)
                self.state = 163
                self.code_block()
                self.state = 164
                self.else_if_block()
                self.state = 165
                self.match(lolcodeParser.T__14)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Else_if_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def full_expression(self):
            return self.getTypedRuleContext(lolcodeParser.Full_expressionContext,0)


        def code_block(self):
            return self.getTypedRuleContext(lolcodeParser.Code_blockContext,0)


        def else_if_block(self):
            return self.getTypedRuleContext(lolcodeParser.Else_if_blockContext,0)


        def NEWLINE(self):
            return self.getToken(lolcodeParser.NEWLINE, 0)

        def getRuleIndex(self):
            return lolcodeParser.RULE_else_if_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElse_if_block" ):
                listener.enterElse_if_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElse_if_block" ):
                listener.exitElse_if_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElse_if_block" ):
                return visitor.visitElse_if_block(self)
            else:
                return visitor.visitChildren(self)




    def else_if_block(self):

        localctx = lolcodeParser.Else_if_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_else_if_block)
        try:
            self.state = 181
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 169
                self.match(lolcodeParser.T__15)
                self.state = 170
                self.full_expression()
                self.state = 171
                self.code_block()
                self.state = 172
                self.else_if_block()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 174
                self.match(lolcodeParser.T__16)
                self.state = 175
                self.match(lolcodeParser.NEWLINE)
                self.state = 176
                self.code_block()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 177
                self.match(lolcodeParser.T__15)
                self.state = 178
                self.full_expression()
                self.state = 179
                self.code_block()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Input_blockContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self):
            return self.getToken(lolcodeParser.LABEL, 0)

        def getRuleIndex(self):
            return lolcodeParser.RULE_input_block

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInput_block" ):
                listener.enterInput_block(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInput_block" ):
                listener.exitInput_block(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitInput_block" ):
                return visitor.visitInput_block(self)
            else:
                return visitor.visitChildren(self)




    def input_block(self):

        localctx = lolcodeParser.Input_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_input_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 183
            self.match(lolcodeParser.T__17)
            self.state = 184
            self.match(lolcodeParser.LABEL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Func_declContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LABEL(self, i:int=None):
            if i is None:
                return self.getTokens(lolcodeParser.LABEL)
            else:
                return self.getToken(lolcodeParser.LABEL, i)

        def NEWLINE(self):
            return self.getToken(lolcodeParser.NEWLINE, 0)

        def code_block(self):
            return self.getTypedRuleContext(lolcodeParser.Code_blockContext,0)


        def getRuleIndex(self):
            return lolcodeParser.RULE_func_decl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc_decl" ):
                listener.enterFunc_decl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc_decl" ):
                listener.exitFunc_decl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc_decl" ):
                return visitor.visitFunc_decl(self)
            else:
                return visitor.visitChildren(self)




    def func_decl(self):

        localctx = lolcodeParser.Func_declContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_func_decl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 186
            self.match(lolcodeParser.T__18)
            self.state = 187
            self.match(lolcodeParser.LABEL)
            self.state = 198
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==lolcodeParser.T__19:
                self.state = 188
                self.match(lolcodeParser.T__19)
                self.state = 189
                self.match(lolcodeParser.LABEL)
                self.state = 195
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==lolcodeParser.T__20:
                    self.state = 191
                    self.match(lolcodeParser.T__20)
                    self.state = 192
                    self.match(lolcodeParser.LABEL)
                    self.state = 197
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)


